@@ -9,13 +9,9 @@ _main
 	add	sp, #4
 	mov	fp, sp
 	add	sp, #104
-	mov	_var01, fp
-	add	fp, #100
-	wrlong	_var01, fp
-	mov	_var02, #65
-	wrbyte	_var02, _var01
-	rdlong	outa, fp
-	sub	fp, #100
+	mov	_var01, #65
+	wrbyte	_var01, fp
+	mov	outa, fp
 	mov	sp, fp
 	sub	sp, #4
 	rdlong	fp, sp
@@ -32,7 +28,5 @@ stackspace
 	long	0[1]
 	org	COG_BSS_START
 _var01
-	res	1
-_var02
 	res	1
 	fit	496
